# wrkr

./: .gitignore  .golangci.yml  .goreleaser.yaml  .pre-commit-config.yaml  .tool-versions  AGENTS.md  CHANGELOG.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  go.mod  go.sum
.githooks/: pre-push
.github/: dependabot.yml  pull_request_template.md
docs/: README.md  architecture.md  ci_cache_strategy.md  ci_permissions_model.md  ci_regress_kit.md  ci_required_checks.md  flows.md  homebrew.md  install.md  integration_checklist.md  project_defaults.md  test_cadence.md  uat_functional_plan.md
docs-site/: README.md  eslint.config.mjs  next.config.mjs  package-lock.json  package.json
perf/: coverage_thresholds.json  resource_budgets.json  runtime_slo_budgets.json  scale_profile_budgets.json  serve_slo_budgets.json
product/: GAPS.md  PLAN_v1.md  PRD.md
schemas/: embed.go
scripts/: bootstrap_branch_protection.sh  check_command_budgets.py  check_coverage_thresholds.py  check_resource_budgets.py  check_scale_profiles.py  check_serve_perf.py  install.sh  license_check.sh  publish_homebrew_tap.sh  record_wrkr_hero_demo.sh  render_homebrew_formula.sh  run_codeql_local.sh  sast_fast.sh  test_adapter_parity.sh  test_adoption_smoke.sh  test_chaos_runner.sh  test_chaos_serve.sh  test_chaos_store.sh  test_contracts.sh  test_ent_consumer_contract.sh  test_github_summary_golden.sh  (+8 more)
sdk/python/: README.md  pyproject.toml
sdk/python/tests/: test_cli.py  test_import.py
sdk/python/wrkr/: __init__.py  cli.py  models.py
(+268 files in other folders)
