[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "wrkr"
version = "0.1.0"
description = "Thin Python client for the wrkr CLI"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Wrkr Contributors" }]
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=8.3.5",
]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["wrkr"]
